--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon -w src --exec \"babel-node src --presets env\"",
+    "build": "rimraf dist && babel src -s -D -d dist --presets env",
+    "production": "nodemon dist",
+    "test": "echo \"Error: no test specified\" && exit"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "co": "^4.6.0",
     "node-fetch": "^2.2.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-runtime": "^6.26.0",
+    "nodemon": "^1.18.3",
+    "rimraf": "^2.6.2"
   }
 }
