--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "co": "^4.6.0",
-    "node-fetch": "^2.2.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-runtime": "^6.26.0",
+    "koa": "^2.5.2",
+    "koa-logger": "^3.2.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "co": "^4.6.0",
+    "node-fetch": "^2.2.0",
     "nodemon": "^1.18.3",
     "rimraf": "^2.6.2"
   }
