--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-runtime": "^6.26.0",
     "koa": "^2.5.2",
-    "koa-logger": "^3.2.0"
+    "koa-logger": "^3.2.0",
+    "koa-session": "^5.8.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
